issue-#22 - Added scaffolding for '.x-app-bar' component. - Patched 'missing whitespace' bug, in 'classNames' (util) method.

--- a/apps/atomic-ui-js-site/src/css/app-header-and-footer.css
+++ b/apps/atomic-ui-js-site/src/css/app-header-and-footer.css
@@ -1,3 +1,3 @@
-:where(.x-app-header, .x-app-footer) > * {
+:where(.x-app-bar, .x-app-footer) > * {
   padding: var(--x-8px);
 }
