--- a/apps/atomic-ui-js-site/src/css/index.scss
+++ b/apps/atomic-ui-js-site/src/css/index.scss
@@ -16,7 +16,7 @@ body > * > * {
   max-width: 1597px;
 }
 
-body > .x-app-header {
+body > .x-app-bar {
   grid-area: app-header;
   border-bottom: var(--x-1px) solid;
   gap: 0.5rem;
