--- a/packages/atomic-ui-js/css/modules/app-bar.css
+++ b/packages/atomic-ui-js/css/modules/app-bar.css
@@ -1,3 +1,3 @@
-.x-app-header {
+.x-app-bar {
   padding: var(--x-16px);
 }
